// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DrawEA draws_request_0 1`] = `
<canvas
  data-snapshot-image="977b2a1abe6c563993ae09ec0402e4ddeb422a9e397f7506fcd96c56dc4901d7c95ecff08e37c71c80d25fcc88480b51c9df9cf7cf188720a44824a0094d06e7"
  height="500"
  width="800"
/>
`;

exports[`DrawEA draws_request_1 1`] = `
<canvas
  data-snapshot-image="9563460c64b9139ec056d471e3e25e5429031fc314e130c94fdf8c18e105592748e2685c264b620947befcf5232a0806f018f24c29e7403ba3a64bc32a2fac00"
  height="500"
  width="800"
/>
`;

exports[`DrawEA draws_request_2 1`] = `
<canvas
  data-snapshot-image="fe3cb3a805793db084ad80acf4eb02ef9ca5dbb575c43c9d2eea3284347ea9a4633b8e0dd69f1ade6f9bba3d1a5f00ad011ec2bd7a468f014231939a80129db4"
  height="500"
  width="800"
/>
`;
